--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
@@ -16,11 +23,14 @@
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.7.4",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
